# kl

./: .clang-format  .clangd  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Directory.Build.props  appveyor.yml  codecov.yml  conanfile.py  klConfig.cmake.in  vcpkg.json
.devcontainer/: devcontainer.json
.devcontainer/ubuntu-20.04/: devcontainer.json
.devcontainer/ubuntu-22.04/: devcontainer.json
.devcontainer/ubuntu-24.04/: devcontainer.json
.devcontainer/ubuntu-26.04/: devcontainer.json
bench/: CMakeLists.txt  base64_bench.cpp  enum_reflector_bench.cpp  json_bench.cpp  main_bench.cpp  signal_bench.cpp  yaml_bench.cpp
bench/input/: typedefs.hpp
ci/: azure-pipelines.yml
ci/templates/: install-boost.yml  install-clang.yml  install-gcc.yml  install-gsl.yml  install-lcov.yml  install-rapidjson.yml  install-yaml-cpp.yml
cmake/: CodeCoverage.cmake  DefineBuildType.cmake  DevFlags.cmake  FindGSL.cmake  FindRapidJSON.cmake  PrecompileHeader.cmake  PrecompileHeaders.cmake  Sanitizers.cmake  SetFlags.cmake  SetupCoverage.cmake  SetupSanitizers.cmake  SourceGroup.cmake  conan_provider.cmake  cotire.cmake  kl.cmake
cmake/compilers/: SetFlags.cmake  clang.cmake  gcc.cmake  msvc.cmake
cmake/kl/: CodeCoverage.cmake  DefineBuildType.cmake  PrecompileHeaders.cmake  Sanitizers.cmake  SourceGroup.cmake
cmake/toolchain/: cl.cmake  clang.cmake  gcc.cmake
docker/: Dockerfile
docker/ubuntu-20.04/: Dockerfile
docker/ubuntu-22.04/: Dockerfile
docker/ubuntu-24.04/: Dockerfile
docker/ubuntu-26.04/: Dockerfile
include/kl/: base64.hpp  binary_rw.hpp  byte.hpp  ctti.hpp  defer.hpp  describe_enum.hpp  describe_record.hpp  enum_flags.hpp  enum_range.hpp  enum_reflector.hpp  enum_set.hpp  enum_traits.hpp  exception_info.hpp  file_view.hpp  hash.hpp  iterator_facade.hpp  json.hpp  json_convert.hpp  json_fwd.hpp  json_print.hpp  match.hpp  meta.hpp  path.hpp  range.hpp  reflect_enum.hpp  reflect_struct.hpp  resource.hpp  resource_attributes.hpp  resource_op.hpp  serialization.hpp  serialization_attributes.hpp  serialization_error.hpp  serialization_fwd.hpp  signal.hpp  split.hpp  stream_join.hpp  string_switch.hpp  tuple.hpp  type_traits.hpp  utility.hpp  (+3 more)
include/kl/binary_rw/: optional.hpp  set.hpp  string.hpp  variant.hpp  vector.hpp
include/kl/detail/: concepts.hpp  macro.hpp  macros.hpp  serialization.hpp  standalone_macros.hpp
scripts/: build-and-test.sh  update-boost.sh  update-cmake.sh  update-lcov.sh
src/: CMakeLists.txt  base64.cpp  file_view.cpp  file_view_unix.cpp  file_view_win32.cpp  json.cpp  path.cpp  serialization_error.cpp  yaml.cpp
src/kl/: base64.cpp  base64.hpp  base_range.hpp  binary_rw.hpp  buffer_rw.hpp  byte.hpp  compile_all.cpp  ctti.hpp  enum_flags.hpp  enum_range.hpp  enum_reflector.hpp  enum_traits.hpp  file_view.cpp  index_sequence.hpp  json_convert.hpp  json_print.hpp  match.hpp  meta.hpp  signal.hpp  split.hpp  stream_join.hpp  string_switch.hpp  tuple.hpp  type_class.hpp  type_traits.hpp  zip.hpp
src/kl/binary_rw/: endian.hpp  map.hpp  optional.hpp  pair.hpp  set.hpp  string.hpp  variant.hpp  vector.hpp
src/kl/buffer_rw/: map.hpp  optional.hpp  pair.hpp  set.hpp  string.hpp  variant.hpp  vector.hpp
test/: CMakeLists.txt  base64_test.cpp  base_range_test.cpp  binary_rw_test.cpp  byte_test.cpp  ctti_test.cpp  defer_test.cpp  enum_flags_test.cpp  enum_range_test.cpp  enum_reflector_test.cpp  hash_test.cpp  json_convert_test.cpp  json_print_test.cpp  main_test.cpp  match_test.cpp  meta_test.cpp  signal_test.cpp  split_test.cpp  tuple_test.cpp  type_class_test.cpp  type_traits_test.cpp  utility_test.cpp  zip_test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_package.cpp
tests/: CMakeLists.txt  base64_test.cpp  base_range_test.cpp  binary_rw_test.cpp  buffer_rw_test.cpp  byte_test.cpp  ctti_test.cpp  defer_test.cpp  describe_enum_test.cpp  describe_record_test.cpp  enum_flags_test.cpp  enum_range_test.cpp  enum_reflector_test.cpp  enum_set_test.cpp  enum_test.cpp  enum_traits_test.cpp  exception_info_test.cpp  file_view_test.cpp  hash_test.cpp  index_sequence_test.cpp  iterator_facade_test.cpp  json_convert_test.cpp  json_print_test.cpp  json_test.cpp  match_test.cpp  meta_test.cpp  path_test.cpp  pch.hpp  range_test.cpp  reflect_enum_test.cpp  reflect_struct_test.cpp  resource_test.cpp  serialization_test.cpp  signal_test.cpp  split_test.cpp  stream_join_test.cpp  string_switch_test.cpp  tuple_test.cpp  type_class_test.cpp  type_traits_test.cpp  (+3 more)
tests/input/: typedefs.hpp
